Fixed text alignment on error page (404.html).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,11 @@ span {
     text-transform: capitalize;
 }
 
+.error-page {
+    font-size: 5em;
+    text-align: center;
+}
+
 /* index page css settings */
 
 .main-area {
